force-app/main/default/objects/Contact/fields/NativeForms_Secret_Code__c.field-meta.xml
<CustomField>
    <fullName>NativeForms_Secret_Code__c</fullName>
    <description>Stores the latest NativeForms verification number for support and admin visibility.</description>
    <inlineHelpText>Latest NativeForms 6-digit verification number sent to this Contact.</inlineHelpText>
    <label>NativeForms Verification Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>