force-app/main/default/objects/Contact/fields/NativeForms_Secret_Code_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>NativeForms_Secret_Code_Verified_At__c</fullName>
    <description>When the latest NativeForms verification number was successfully verified.</description>
    <inlineHelpText>Last successful NativeForms verification number verification time.</inlineHelpText>
    <label>NF Verification Completed At</label>
    <type>DateTime</type>
</CustomField>