force-app/main/default/objects/Contact/fields/NF_User_Verification_Attempts__c.field-meta.xml
<CustomField>
    <fullName>NF_User_Verification_Attempts__c</fullName>
    <description>How many failed verification attempts were made against the latest NativeForms verification number.</description>
    <inlineHelpText>Failed attempts for the latest NativeForms verification number.</inlineHelpText>
    <label>NativeForms Verification Number Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>