force-app/main/default/objects/Contact/fields/NF_User_Verification_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>NF_User_Verification_Expires_At__c</fullName>
    <description>When the latest NativeForms verification number expires.</description>
    <inlineHelpText>Expiration date/time for the latest NativeForms verification number.</inlineHelpText>
    <label>NF Verification Number Expires At</label>
    <type>DateTime</type>
</CustomField>