force-app/main/default/objects/Contact/fields/NF_User_Verification_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>NF_User_Verification_Verified_At__c</fullName>
    <description>When the latest NativeForms verification number was successfully verified.</description>
    <inlineHelpText>Last successful NativeForms verification number verification time.</inlineHelpText>
    <label>NF Verification Completed At</label>
    <type>DateTime</type>
</CustomField>